09 HTML and CSS

--- a/09. HTML e CSS/tutorial/tema9/index.html
+++ b/09. HTML e CSS/tutorial/tema9/index.html
@@ -50,46 +50,48 @@
   </head>
   <body>
     <p>Lorem ipsum dolor sit</p>
-    <table class="responsive">
-      <thead>
-        <tr>
-          <th>Company</th>
-          <th>Contact</th>
-          <th>Country</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <!-- Ocupo duas rows-->
-          <td rowspan="2">Germany</td>
-        </tr>
-        <tr>
-          <!-- Ocupo duas colunas-->
-          <td colspan="2">
-            Centro comercial
-            Moctezumaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-          </td>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Maria Anders</td>
-          <td>Portugal</td>
-        </tr>
-      </tbody>
-      <tfoot>
-        <tr>
-          <td colspan="2" rowspan="2"></td>
-          <td>Total:</td>
-        </tr>
-        <tr>
-          <td>333 €</td>
-        </tr>
-      </tfoot>
-      <caption>
-        Sou uma caption
-      </caption>
-    </table>
+    <div class="responsive">
+      <table>
+        <thead>
+          <tr>
+            <th>Company</th>
+            <th>Contact</th>
+            <th>Country</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <!-- Ocupo duas rows-->
+            <td rowspan="2">Germany</td>
+          </tr>
+          <tr>
+            <!-- Ocupo duas colunas-->
+            <td colspan="2">
+              Centro comercial
+              Moctezumaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            </td>
+          </tr>
+          <tr>
+            <td>Alfreds Futterkiste</td>
+            <td>Maria Anders</td>
+            <td>Portugal</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2" rowspan="2"></td>
+            <td>Total:</td>
+          </tr>
+          <tr>
+            <td>333 €</td>
+          </tr>
+        </tfoot>
+        <caption>
+          Sou uma caption
+        </caption>
+      </table>
+    </div>
   </body>
 </html>
